# wt_project

./: app.py  helpers.py
express/: README.md  REPORT.tex  code_listings.tex  database.ts  deno.json  init-db.ts  main.ts  tokenService.ts
express/controllers/: accountController.ts  authController.ts  dashboardController.ts  transactionController.ts
express/middleware/: auth.ts
express/models/: account.ts  transaction.ts  user.ts
express/routes/: accounts.ts  auth.ts  dashboard.ts  transactions.ts
express/views/: dashboard.ejs  dashboard.html  deposit.ejs  details.ejs  login.ejs  register.ejs  register.html  transfer.ejs
express2/: deno.json  spec.txt
express_report/: Tectonic.toml
express_report/src/: _preamble.tex  express_code_listings.tex  flask_code_listings.tex  index.tex  python_code_listings.tex
flask/: .gitignore  app.py  helpers.py  requirements.txt
flask/templates/: apology.html  index.html  layout.html  login.html  sell.html  sell_old.html
flask_report/: Tectonic.toml
flask_report/src/: _preamble.tex  code_listings.tex  index.tex
harsith_express/: database.js  main.js  package-lock.json  package.json
harsith_express/controllers/: accountController.js
new_flask/: .gitignore  app.py  database.py  pyproject.toml
new_flask/static/: index.css  profile.css  styles.css  transfer.css
new_flask/templates/: deposit.html  edit_profile.html  history.html  index.html  layout.html  login.html  profile.html  register.html  transfer.html
static/: styles.css
templates/: buy.html  history.html  quote.html  register.html
(+9 files in other folders)
